--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazy-load": "^3.1.13",
     "react-particles-js": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scrollable-anchor": "^0.6.1",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "sharp": "^0.26.0"
   },
   "scripts": {
     "start": "react-scripts start",
