--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-lazy-load": "^3.1.13",
     "react-particles-js": "^3.3.0",
+    "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scrollable-anchor": "^0.6.1",
