--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-lazy-load": "^3.1.13",
     "react-particles-js": "^3.3.0",
     "react-preloaders": "^3.0.3",
