--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
+    "react-dom": "^16.14.0",
+    "react-helmet-async": "^1.0.7",
     "react-lazy-load": "^3.1.13",
-    "react-particles-js": "^3.3.0",
+    "react-particles-js": "^3.4.1",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-typed": "^1.2.0",
-    "sharp": "^0.26.0"
+    "sharp": "^0.26.2"
   },
   "scripts": {
     "start": "react-scripts start",
