--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "boutahardev",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,9 +16,9 @@
     "react-particles-js": "^3.4.1",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.1",
     "react-typed": "^1.2.0",
-    "sharp": "^0.26.2"
+    "sharp": "^0.26.3"
   },
   "scripts": {
     "start": "react-scripts start",
